--- a/en/theme/material/assets/css/home.css
+++ b/en/theme/material/assets/css/home.css
@@ -62,6 +62,12 @@
     margin-bottom: 0.01em;
 }
 
+/* Reduce spacing between the two paragraphs on the home description section */
+.description-section .leftContent p {
+    margin-top: 0.01em;
+    margin-bottom: 0.01em;
+}
+
 .md-column-grid {
     margin: auto;
     display: flex;
@@ -217,6 +223,7 @@
     top: -2.7rem;
     transform: none;
     padding: 2px;
+
     
     
     
