--- a/en/theme/material/partials/javascripts/base.html
+++ b/en/theme/material/partials/javascripts/base.html
@@ -33,6 +33,12 @@
 </script>
 <!-- End Google Tag Manager -->
 
+<!-- Start of Reo Javascript -->
+    <script type="text/javascript">
+      !function(){var e,t,n;e="8995a8d9dc109cb",t=function(){Reo.init({clientID:"8995a8d9dc109cb"})},(n=document.createElement("script")).src="https://static.reo.dev/"+e+"/reo.js",n.defer=!0,n.onload=t,document.head.appendChild(n)}();
+    </script>
+    <!-- End of Reo Javascript -->
+
 {% for path in config.extra_javascript %}
 <script src="{{ path | url }}"></script>
 {% endfor %}
