Add Moesif tracking

--- a/en/theme/material/partials/javascripts/base.html
+++ b/en/theme/material/partials/javascripts/base.html
@@ -36,3 +36,10 @@
 {% for path in config.extra_javascript %}
 <script src="{{ path | url }}"></script>
 {% endfor %}
+
+<script src="//unpkg.com/moesif-browser-js@^1/moesif.min.js"></script>
+<script type="text/javascript">
+  moesif.init({
+    applicationId: 'eyJhcHAiOiI0OTM6MzQwOSIsInZlciI6IjIuMSIsIm9yZyI6IjEwNDc6NjY2IiwicHViIjp0cnVlLCJpYXQiOjE3Njk5MDQwMDB9.KbF_rIN-phhR-W4pMHEn-8bAfjO-YSZ24Ch9xEtXqYk',
+  });
+</script>
